# nfcbottlekanriapp

./: .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  bottles.db  docker-compose.yml  fly.toml  note.txt  openapi.yaml  schema.sql  tailwind.config.js  test.html  仕様書.txt
public/: manifest.json  nfc_bridge.js  passkey_bridge.js
src/: app.rs  lib.rs  main.rs
style/: main.scss
