[package]
name = "bottlekanri"
version = "0.2.0"
edition = "2021"

[lib]
name = "bottlekanri"

[[bin]]
name = "bottlekanri"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
uuid        = { version = "1", features = ["v4", "serde"] }
axum        = "0.8"
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http  = { version = "0.6", features = ["cors", "trace"] }
url         = "2"
webauthn-rs = "0.5"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
